# custom-docker-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
src/: __init__.py  containers.py
